--- a/paginas/torcida.html
+++ b/paginas/torcida.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <title>VAI CORINTHIANS</title>
     <link rel="stylesheet" href="../estilos/estilos.css">
+    <link rel="stylesheet" href="../estilos/navbar.css">
 </head>
 <body>
     <div class = "cabecalho">
@@ -13,15 +14,15 @@
             <h2 class="altaneiro">"SEMPRE ALTANEIRO"</h2>
         </header>
          <nav>
-            ||  <a href="../paginas/index.html">História</a> ||
-                <a href="../paginas/idolos.html">Ídolos</a> ||
-                <a href="../paginas/titulos.html">Títulos</a> ||
-                <a href="../paginas/hino.html">Hino</a> ||
-                <a href="../paginas/escudo.html">Escudo</a> ||
-                <a href="../paginas/mascote.html">Mascote</a> ||
-                <a href="../paginas/camisas.html">Camisas</a> ||
-                <a href="../paginas/torcida.html">Torcida</a> ||
-                <a href="../paginas/contato.html">Contato</a> ||
+          <a href="../paginas/index.html">História</a>
+                <a href="../paginas/idolos.html">Ídolos</a>
+                <a href="../paginas/titulos.html">Títulos</a>
+                <a href="../paginas/hino.html">Hino</a>
+                <a href="../paginas/escudo.html">Escudo</a>
+                <a href="../paginas/mascote.html">Mascote</a>
+                <a href="../paginas/camisas.html">Camisas</a>
+                <a href="../paginas/torcida.html">Torcida</a>
+                <a href="../paginas/contato.html">Contato</a>
         </nav>
     </div>
     <hr>
