--- a/paginas/contato.html
+++ b/paginas/contato.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../estilos/estilos.css">
     <link rel="stylesheet" href="../estilos/navbar.css">
 </head>
-<body class="pinto">
+<body>
     <main>
         <div class = "cabecalho">
             <header>
