--- a/paginas/escudo.html
+++ b/paginas/escudo.html
@@ -33,7 +33,7 @@
             <hr>
             <p>A história do escudo do Corinthians começa muito antes dele sequer existir e é completamente ligada às raízes do clube. Isso porque, apesar de ter sido fundado em 1º de setembro de 1910, o Corinthians ficou sem um símbolo por três anos. Durante todo esse tempo, era entendido que o time, formado por trabalhadores, era de várzea e não se enquadrava nos padrões de uma equipe de elite no Brasil.</p>
         </div>
-        <div class="container">
+        <div class="container-escudos">
             <div class="box-start">
                 <h2>1913</h2>
                 <h3>Primeiro escudo</h3>
